/api/v1/users/getIdentity returns 404 not null, stricter error handling
